@@ -6,6 +6,7 @@ Articles 1.1.1
 - [#6303] Fix issue where some settings do not set dirty status for container form when changed
 - [#6324] Fix issue where import from MODX sets isfolder incorrectly
 - Ensure MODX import changes Resources to new ArticlesContainer template
+- Add &includeTVsList and &processTVsList advanced settings for listings
 - Upgrade getResources to 1.4.2 and getPage to 1.2.2
 
 Articles 1.1.0
